--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -66,6 +66,9 @@ body {
   --vt-c-purple-dark: #823c83;
   --vt-c-purple-darker: #602960;
 
+  --vt-c-loader-primary: #164e63;
+  --vt-c-loader-secondary: #155e75;
+
   --vt-c-bg: var(--vt-c-white);
   --vt-c-bg-soft: var(--vt-c-white-soft);
   --vt-c-bg-mute: var(--vt-c-white-mute);
