--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -89,6 +89,37 @@ body {
   --vt-c-brand-light: var(--vt-c-green-light);
   --vt-c-brand-dark: var(--vt-c-green-dark);
   --vt-c-brand-highlight: var(--vt-c-brand-dark);
+
+  --primary-50: 236 253 245;
+  --primary-100: 209 250 229;
+  --primary-200: 167 243 208;
+  /* --primary-300: 110 231 183; */
+  --primary-300: 103 232 249;
+  /* --primary-400: 52 211 153; */
+  --primary-400: 21 94 117;
+  /* --primary-500: 16 185 129; */
+  --primary-500: 21 94 117;
+  --primary-600: 5 150 105;
+  --primary-700: 4 120 87;
+  --primary-800: 6 95 70;
+  --primary-900: 4 78 56;
+  --primary-950: 2 44 34;
+  --surface-0: 255 255 255;
+  --surface-50: 248 250 252;
+  --surface-100: 241 245 249;
+  --surface-200: 226 232 240;
+  --surface-300: 203 213 225;
+  --surface-400: 148 163 184;
+  --surface-500: 100 116 139;
+  /* --surface-600: 71 85 105; */
+  --surface-600: 23 23 23;
+  /* --surface-700: 45 55 72; */
+  --surface-700: 38 38 38;
+  /* --surface-800: 30 41 59; */
+  --surface-800: 38 38 38;
+  /* --surface-900: 15 23 42; */
+  --surface-900: 0 0 0;
+  --surface-950: 3 6 23;
 }
 
 .dark {
@@ -125,3 +156,7 @@ body {
 .p-skeleton::after {
   background: linear-gradient(90deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0));
 }
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
