--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,3 @@
-
 body {
   font-family: 'Roboto', sans-serif;
   touch-action: pan-x pan-y;
@@ -26,19 +25,19 @@ body {
   --vt-c-gray-dark-3: #3a3a3a;
   --vt-c-gray-dark-4: #282828;
   --vt-c-gray-dark-5: #202020;
-  --vt-c-divider-light-1: rgba(60, 60, 60, .29);
-  --vt-c-divider-light-2: rgba(60, 60, 60, .12);
-  --vt-c-divider-dark-1: rgba(84, 84, 84, .65);
-  --vt-c-divider-dark-2: rgba(84, 84, 84, .48);
+  --vt-c-divider-light-1: rgba(60, 60, 60, 0.29);
+  --vt-c-divider-light-2: rgba(60, 60, 60, 0.12);
+  --vt-c-divider-dark-1: rgba(84, 84, 84, 0.65);
+  --vt-c-divider-dark-2: rgba(84, 84, 84, 0.48);
   --vt-c-text-light-1: var(--vt-c-indigo);
-  --vt-c-text-light-2: rgba(60, 60, 60, .7);
-  --vt-c-text-light-3: rgba(60, 60, 60, .33);
-  --vt-c-text-light-4: rgba(60, 60, 60, .18);
+  --vt-c-text-light-2: rgba(60, 60, 60, 0.7);
+  --vt-c-text-light-3: rgba(60, 60, 60, 0.33);
+  --vt-c-text-light-4: rgba(60, 60, 60, 0.18);
   --vt-c-text-light-code: var(--vt-c-indigo-soft);
-  --vt-c-text-dark-1: rgba(255, 255, 255, .87);
-  --vt-c-text-dark-2: rgba(235, 235, 235, .6);
-  --vt-c-text-dark-3: rgba(235, 235, 235, .38);
-  --vt-c-text-dark-4: rgba(235, 235, 235, .18);
+  --vt-c-text-dark-1: rgba(255, 255, 255, 0.87);
+  --vt-c-text-dark-2: rgba(235, 235, 235, 0.6);
+  --vt-c-text-dark-3: rgba(235, 235, 235, 0.38);
+  --vt-c-text-dark-4: rgba(235, 235, 235, 0.18);
   --vt-c-text-dark-code: var(--vt-c-indigo-light);
   --vt-c-green: #42b883;
   --vt-c-green-light: #42d392;
@@ -147,14 +146,24 @@ body {
 }
 
 .dark .p-skeleton::after {
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.04), rgba(255, 255, 255, 0));
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0),
+    rgba(255, 255, 255, 0.04),
+    rgba(255, 255, 255, 0)
+  );
 }
 
 .p-skeleton {
   background-color: #e5e7eb;
 }
 .p-skeleton::after {
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0));
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0),
+    rgba(255, 255, 255, 0.4),
+    rgba(255, 255, 255, 0)
+  );
 }
 
 @tailwind base;
